# brainvox

./: README.md
brainvox/: Makefile  config  config.Absoft  config.Intel
brainvox/IrisGL/: Makefile  capturexfont.c  check.xbm  close.c  ext_names.h  filbuf.c  flsbuf.c  igl_common.h  igl_draw.c  igl_events.c  igl_pup.c  igl_pup.h  igl_text.c  igl_window.c  image.h  image_protos.h  junk  myfont.c  name.c  open.c  pix.c  rdwr.c  rle.c  row.c  sgilib.c  sgilib.h  test.c
brainvox/brainvox/: Makefile  brainvox.f  brainvox_prefs.f  reaper.c  vtuif.r
brainvox/brw/: brw_calc.f  mri_brw.f  mri_brw_inc.f
brainvox/calc/: Makefile  calc.f  calc_volumes.f  calcarea.f  calcuif.r  header.f  intersectarea.f  outputdata.f  outputdata_v2.f  paintarea.f  work.pc
brainvox/config_files/: irix  irix-g  irix-gl  irix-gl-g  linux  linux-absoft  linux-g  osx-absoft  win32-absoft
brainvox/docs/: Makefile  ReleaseNotes.txt
brainvox/filer/: Makefile  filer.f  filer_inc.inc  fileruif.r  head.f  work.pc
brainvox/include/: fdevice.h  fget.h  fgl.h  fsphere.h  gl.h
brainvox/libs/: Makefile  bv_error.f  bv_shmem.h  cfileio.c  fileio.f  filenames.f  image.h  imagestuff.f  io_help.c  keyboard.f  keyboard_inc.f  keyboard_int.f  libvtrace.h  match.c  mesg_box.c  name_changer.f  nifti1.c  nifti1.h  polyfill.f  polyfill_c.c  prefs.c  prefs.f  prefs.h  set_cindex.c  set_gamma.c  shared.c  sharedio.f  svimg.c  tag_inc.f  tal_interface.c  vt_inc.f  vt_protos.f  work.pc  z_compress.h
brainvox/map3/: Makefile  compute_map.f  map3.f  map3.inc  map3_file_io.f  map3uif.r  read_dir.c  (+1 more)
tools/: Makefile  copying.txt  readme.txt
tools/AIR5.0/AIR5.0/: AIRmain.h  HEADERmain.h  LICENSE  LICENSE.h  MAKE.com  Makefile  Makefile.in  Makefile.in.orig  README  align.tcl  align_warp.c  align_warp.tcl  alignlinear.c  binarize.c  binarymask.c  binarymath.c  cd_air.c  cd_warp.c  combine_air.c  combine_warp.c  config.h  config.h.in  configure  configure.in  configure.scan  crop.c  definecommon_air.c  determinant_mask.c  fixheader.c  fuse.c  gsmooth.c  identify.c  invert_air.c  layout.c  magnify.c  makeaheader.c  manualreslice.c  mv_air.c  mv_warp.c  overlay_mask.c  (+27 more)
tools/AIR5.0/AIR5.0/src/: AIR.h  Makefile  Makefile.in  align.c  alignwarp.c  antiwarp2D.c  antiwarp3D.c  cdotc.c  cfftf1.c  cffti1.c  chirpterp.c  comloger.c  comtloger.c  config.h.in  create_vols.c  csqrt.c  ddot.c  diffg2D.c  diffg3D.c  do_align_warp.c  do_alignlinear.c  do_crop.c  do_definecommon_air.c  do_fuse.c  do_identify.c  do_invert_air.c  do_reconcile_air.c  do_reslice.c  do_reslice_ucf.c  do_reslice_unwarp.c  do_reslice_vector.c  do_reslice_warp_ucf.c  do_stereoproject.c  eexper4.c  eloger4.c  eloger5.c  exchng.c  expderivut.c  exput.c  findcoords12.cf  (+112 more)
(+853 files in other folders)
